bugfix: fill screen on mobile

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -52,7 +52,7 @@ h6 {
 .style,
 .description {
   font-family: 'Big Noodle Titling';
-  font-size: 3rem;
+  font-size: 1.5rem;
   margin: 5%;
 }
 
